<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:id="@+id/spell_layout_core"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/yellow">

    <ImageView
        android:id="@+id/score_view_spell"
        android:layout_width="210dp"
        android:layout_height="90dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />


    <ImageButton
        android:id="@+id/buy_button_spell"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/blue"
        android:scaleType="fitXY" />


    <TextView
        android:id="@+id/score_text_spell"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_toEndOf="@+id/score_view_spell"
        android:text="@integer/score"
        android:textColor="@color/blue"
        android:textSize="53dp" />


    <TextView
        android:id="@+id/word_to_be_spelled"
        android:layout_width="wrap_content"
        android:layout_height="452dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="250dp"
        android:textSize="50sp" />

    <ImageButton
        android:id="@+id/spell_button_spell"
        android:layout_width="120dp"
        android:layout_height="65dp"
        android:layout_marginTop="320dp"
        android:layout_centerHorizontal="true"
        android:background="@color/blue"
        android:scaleType="fitXY" />


    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="530dp"
        android:background="@color/blue">

    </android.support.v4.view.ViewPager>


</RelativeLayout>

