...
        android:maxHeight="500dp"
        android:maxWidth="500dp"
        android:src="@drawable/grabble" />


    <ImageButton
        android:id="@+id/newGame"
        android:layout_width="160dp"
        android:layout_height="80dp"
        android:layout_alignStart="@+id/settings"
        android:layout_below="@+id/Grabble"
        android:adjustViewBounds="true"
        android:background="@color/blue"
        android:scaleType="fitXY"
        android:src="@drawable/newgame"
        />
...
