<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="General Settings">


    </PreferenceCategory>

    <PreferenceCategory android:title="Color">
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="background_color"
            android:summary="Is the main background color dark?"
            android:title="Dark Background">

        </CheckBoxPreference>

    </PreferenceCategory>

</PreferenceScreen>