<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/core_linear_layout"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/underlying_relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/value_text_adapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/value_view_adapter"
            android:text="@integer/value"
            android:textColor="@color/yellow"
            android:textSize="70sp" />


        <ImageView
            android:id="@+id/value_view_adapter"
            android:layout_width="220dp"
            android:layout_height="80dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_toEndOf="@+id/letter_button_adapter"
            android:contentDescription=""
            android:scaleType="fitXY"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/letter_button_adapter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="10dp"
            android:background="@color/blue" />



    </RelativeLayout>


</LinearLayout>